class AppStrings {
  static const String appName = 'Kura';
  static const String appTagline = 'Đồng Hành Số';
  
  // Auth
  static const String login = 'Đăng nhập';
  static const String register = 'Đăng ký';
  static const String logout = 'Đăng xuất';
  static const String email = 'Email';
  static const String password = 'Mật khẩu';
  static const String confirmPassword = 'Xác nhận mật khẩu';
  static const String displayName = 'Họ và tên';
  static const String forgotPassword = 'Quên mật khẩu?';
...
